--- a/README.org
+++ b/README.org
@@ -8,14 +8,18 @@
 
   This module implements a method to perform a fast forward feature selection using a Gaussian Mixture Model. The algorithm is based on the following papers http://fauvel.mathieu.free.fr/pdfs/fffs_jstars.pdf.
 
+* Install
+
+The current version is now compatible with the new OTB-5.8 release. The former version is still available on branch '5.6-compatible'.
+
 * Getting Started
+
+A detailed and explained example of how to use the module is available on Mathieu Fauvel's blog: http://fauvel.mathieu.free.fr/too-many-features.html.
 
 In addition of the C++ class, this module contains 3 OTB applications:
 - otbcli_TrainGMMApp: Train a GMM classifier from multiple pairs of images and training vector data. It also allows to perform ridge regularization with an embedded selection of the regularization parameter among a list of proposed values.
 - otbcli_TrainGMMSelectionApp: Train a GMM classifier and in addition perform a feature selection algorithm (SFS, SFFS) with various possible criterion (Jeffries-Matusita dist., Kullback-Lieber div., Cohen's kappa, overall accuracy, mean F1-score).
 - otbcli_PredictGMMApp: Perform a classification of the input image according to a GMM model file created by one of two previous applications.
-
-A detailed and explained example of how to use the module is available on Mathieu Fauvel's blog: http://fauvel.mathieu.free.fr/too-many-features.html.
 
 * Details of application parameters
 
